[package]
name = "ethvm-internals"
version = "0.1.0"
authors = ["Boyu Yang<yangby@cryptape.com>"]
description = "Internal proc-macros of EthVM."
homepage = "https://yangby-cryptape.github.io/rust-ethvm/"
repository = "https://github.com/yangby-cryptape/rust-ethvm"
keywords = ["evm"]
categories = []
license = "Apache-2.0 OR MIT"

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"

[lib]
proc-macro = true
